2005-11-16  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-stepper.c (jump): Added.
	(foo): Update call to switch back and forth from jump().

2006-11-15  Andrew Cagney  <cagney@redhat.com>

	* funit-exit.xml: New.
	* funit.xml: Cross reference funit-exit(8).
	* funit-child.xml: Ditto.
	* funit-exec.xml: Ditto.
	* funit-threads.xml: Ditto.

2006-11-14  Mike Cvet  <mcvet@redhat.com>

	* funit-rt-stepper.c (signal_parent): Added, fixes race condition.
	(main): Edited to fix race condition.

2006-11-13  Mike Cvet  <mcvet@redhat.com>
	
	* funit-rt-stepper.c: Added.

2006-11-06  Andrew Cagney  <cagney@redhat.com>

	* funit.xml: Mention --all and --stress.

	* funit.java: Call runTestCases.
	* funit.xml: Mention -n / --list-classes-only option.
	
	* funit.java: Pass "funit" to Runner constructor.

2006-10-19  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c :Do the same for all architectures.

2006-10-19  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-breakpoints.c (trap_handler): Call siglongjmp to return.
	(dummy): Call sigsetjmp to skip the invalid instruction after
	it is executed for the first time on PPC64.

2006-10-13  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-ppc64-regs.S: Set FPRs for the check in TestRegs. 

2006-10-12  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Emacs indent.
	
	* funit.java: Move 32- and 64- logic to frysk.junit.Runner.

2006-10-11  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Set the frysk.junit.Patsh data path to PKGDATADIR.

2006-10-11  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-ppc64-regs.S (main): Conditional compile to avoid breaking
	build on platforms other than powerpc.

2006-10-10  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-ppc64-regs.S: Add 32-bit asm code.

2006-10-09  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-breakpoints.c (dummy): Generate trap event for
	powerpc32 as well.

2006-10-05  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (trap_handler): New function.
	(dummy): Send trap signal and generate trap event.